[package]
name = "rustic_audio_tool"
version = "0.0.2"
authors = ["Brett Alexander Preston"]
description = "Voice Audio Recording, Processing, and Playback"
license = "AGPL-3.0-only"
repository = "https://github.com/brettpreston/Rustic_Audio/tree/main/Rust_Audio_Library"
readme = "readme.md"
keywords = ["DSP", "voice", "record", "audio", "clean"]
categories = ["multimedia::audio"]
edition = "2021"

[dependencies]
# Cross-Platform Audio Library
cpal = "0.17.3"

# Python bindings for the host application
pyo3 = { version = "0.22.6", features = ["abi3-py311", "extension-module"] }

# Reading and writing WAV audio files
hound = "3.5.1"

# Fast Fourier Transform
rustfft = "6.1.0"

# optimized FFT operations for real-valued signals
realfft = "3.3.0"

# pure Rust Opus codec
opus-rs = "0.1.22"

# reading and writing Ogg container files.
ogg = "0.9.2"

[lib]
name = "rustic_audio_tool"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[patch.crates-io]
opus-rs = { path = "vendor/opus-rs" }
